--- a/src/recipes.module.css
+++ b/src/recipes.module.css
@@ -1,8 +1,6 @@
 .recipe{
     border-radius: 10px;
     box-shadow: 0px 5px 20px rgb(124, 120, 120);
-    margin: 20px;
-    display: flex;
     flex-direction: column;
     justify-content: space-around;
     background: white;
@@ -11,6 +9,10 @@
 }
 .image{
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 140px;
+    height: 140px;
+    padding: 10px;
+    display: flex;
+    margin: auto auto;
+    outline: 2px solid green;
 }
